# claude2openai

./: .gitignore  README.md  bootstrap_claude_gateway.py  claude2openai.cmd  claude2openai.ps1  gateway_config.toml  litellm_config.yaml  manage_gateway.ps1  pyproject.toml  run_bench.ps1  run_smoke.ps1  start_fixup.ps1  start_gateway.ps1
docs/superpowers/plans/: 2026-05-19-claude-code-openai-gateway.md  2026-05-19-python-bootstrap.md  2026-05-19-startup-lifecycle.md
docs/superpowers/specs/: 2026-05-19-claude-code-openai-gateway-design.md  2026-05-19-python-bootstrap-design.md  2026-05-19-startup-lifecycle-design.md
src/claude2openai_gateway/: bootstrap.py  fixup.py  fixup_server.py  litellm_patch.py  litellm_proxy.py  smoke.py
tests/: test_bootstrap.py  test_fixup.py  test_fixup_server.py  test_litellm_patch.py  test_smoke.py
