[project]
name = "claude2openai-gateway"
version = "0.1.0"
description = "Local Anthropic-compatible gateway wrappers for Claude Code"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115,<1",
  "httpx>=0.27,<1",
  "litellm[proxy]>=1.83.0,<2",
  "pytest>=8.3,<9",
  "uvicorn>=0.30,<1",
]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
